--- a/NOVA/Views/Satis/FiyatYonetimi.cshtml
+++ b/NOVA/Views/Satis/FiyatYonetimi.cshtml
@@ -161,7 +161,7 @@
                             <label style="font-size: 10px; letter-spacing:1px">PRK-TPT</label>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col" id="siralama">
                         <div class="class=form-check form-switch text-center">
                             <input class="form-check-input" type="checkbox" onchange="sirala()" id="flexSwitchCheckChecked1" unchecked="">
                         </div>
@@ -355,7 +355,14 @@
                 content: function () { return '<div id="PopoverContent"><div class="input-group"><textarea onkeyup="keychange(this)" rows="15" name="' + $(this).attr('data-fiyat') + '" type="text" class="form-control">' + ($(this).attr('data') == "null" ? "" : $(this).attr('data').replaceAll("::", "\n").replaceAll("&.&", "+").replaceAll("&yuzde&", "%").replaceAll("&tire&", "/").replaceAll("&eksi&", "-").replaceAll("&gulucuk&", "😀")) + '</textarea></div></div><button type="button" onclick="btnclick()" class="btn btn-secondary btn-sm mb-1 mt-1 float-sm-end">Kaydet</button></div>'; }
 
             });
+            document.getElementsByClassName("search-input")[0].onkeyup = function () {
+                if (document.getElementsByClassName("search-input")[0].value.length > 0) {
+                    document.getElementById("siralama").style.display = "none";
+                } else {
+                    document.getElementById("siralama").style.display = "unset";
+                }
 
+            }
         })
 
         function btnclick() {
