--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -187,16 +187,21 @@
                         <div data-i18n="Without menu">Uygulama Ayarları</div>
                     </a>
                 </li>
-                @*<li class="menu-item" id="yetki" style="display: @ViewBag.Display2">
-                    <a href="@Url.Action("YetkiAyar", "YonetimPaneli")" class="menu-link">
-                        <div data-i18n="Without navbar">Kullanıcı Yetkileri</div>
+                <li class="menu-item" id="istatistik" style="display: @ViewBag.Display2">
+                    <a href="@Url.Action("UygulamaIstatistik", "YonetimPaneli")" class="menu-link">
+                        <div data-i18n="Without menu">Uygulama İstatistikleri</div>
                     </a>
                 </li>
-                <li class="menu-item" style="display: @ViewBag.Display3">
-                    <a href="#" class="menu-link">
-                        <div data-i18n="Without navbar">Kullanıcı İstatistikleri</div>
-                    </a>
-                </li>*@
+                @*<li class="menu-item" id="yetki" style="display: @ViewBag.Display2">
+            <a href="@Url.Action("YetkiAyar", "YonetimPaneli")" class="menu-link">
+                <div data-i18n="Without navbar">Kullanıcı Yetkileri</div>
+            </a>
+        </li>
+        <li class="menu-item" style="display: @ViewBag.Display3">
+            <a href="#" class="menu-link">
+                <div data-i18n="Without navbar">Kullanıcı İstatistikleri</div>
+            </a>
+        </li>*@
 
             </ul>
         </li>
