--- a/NOVA/Views/IK/PersonelSubeYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelSubeYonetim.cshtml
@@ -6017,6 +6017,12 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script type="text/javascript" src="/assets/vendor/libs/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/assets/vendor/js/menu.js"></script>
+    <!-- endbuild -->
+    <!-- Main JS -->
+    <script type="text/javascript" src="/assets/js/main.js"></script>
 
+    <!-- Page JS -->
+    <script type="text/javascript" src="/assets/js/dashboards-analytics.js"></script>
 </body>
 </html>
