--- a/NOVA/Views/YonetimPaneli/Kullanici.cshtml
+++ b/NOVA/Views/YonetimPaneli/Kullanici.cshtml
@@ -30,6 +30,15 @@
         position: relative;
         float: right;
     }
+    .table td {
+        text-align: center;
+    }
+    .table th {
+        text-align: center;
+    }
+    #table img:hover {
+        opacity: 0.4;
+    }
 </style>
 <div class="jumbotron vertical-center">
     <div class="modal fade" id="modalCenter" tabindex="-1" aria-hidden="true">
@@ -139,7 +148,8 @@
             <label class="btn btn-outline-secondary" for="btnradio4">YETKİLER(ROL)</label>
             <input type="radio" class="btn-check" onclick="changetable(3)" name="btnradio" id="btnradio3" autocomplete="off">
             <label class="btn btn-outline-secondary" for="btnradio3">MODÜLLER</label>
-
+            <input type="radio" class="btn-check" onclick="changetable(5)" name="btnradio" id="btnradio5" autocomplete="off">
+            <label class="btn btn-outline-secondary" for="btnradio5">KULLANICI AKTİVİTESİ</label>
         </div>
         <div id="employeeTableWrapper" class="tableWrapper">
 
@@ -372,9 +382,13 @@
                 return '<div class="ph-item"><div class="ph-picture"></div></div>'
             }
         }
+        var last = null;
         $(document).ready(function () {
             getModulesAsync().then(function (data) {
                 modules = data;
+            })
+            $.getJSON("http://192.168.2.13:83/api/userlogin/exec/situation", function (data) {
+                last = data;
             })
             getRoleAsync().then(function (data) {
                 roles = data;
@@ -452,7 +466,7 @@
                 })
             }
             else if (value == 2) {
-                
+
                 $('#filter').select2({ placeholder: 'Grup Filtresi', width: '90%', float: 'end' });
                 $('#filter').show();
                 $('#table').bootstrapTable('destroy');
@@ -587,19 +601,19 @@
 
                 })
             }
-            else {
+            else if (value == 3) {
                 $('#filter').select2();
                 $('#filter').select2('destroy');
                 $('#filter').hide();
-                
+
                 $('#table').bootstrapTable('destroy');
                 document.getElementById("trid").replaceChildren();
                 $('#table').bootstrapTable({
                     url: 'http://192.168.2.13:83/api/modules',
                     columns: [
-                    {
-                        field: 'INCKEY',
-                        title: 'INCKEY',
+                        {
+                            field: 'INCKEY',
+                            title: 'INCKEY',
                         }, {
                             field: 'INCKEY',
                             title: 'NAME',
@@ -608,12 +622,65 @@
                         {
                             field: 'ACTIVE',
                             title: 'ACTIVE',
-                            formatter:'FormatterModule'
+                            formatter: 'FormatterModule'
                         }
                     ]
 
                 })
+            } else {
+                $('#filter').select2();
+                $('#filter').select2('destroy');
+                $('#filter').hide();
+
+                $('#table').bootstrapTable('destroy');
+                document.getElementById("trid").replaceChildren();
+                $('#table').bootstrapTable({
+                    url: 'http://192.168.2.13:83/api/userlogin/exec/lastseen',
+                    columns: [
+                        {
+                            field: 'LOG_ID',
+                            title: 'Oturum Numarası',
+                            sorter: 'dataSorter',
+                            sortable: true,
+                            visible: false
+
+                        },
+                        {
+                            field: 'USER_NAME',
+                            title: 'Kullanıcı Adı',
+                            formatter: 'userFormatter'
+                        },
+                        {
+                            field: 'LAST_SEEN',
+                            title: 'Son Görülme',
+                            formatter: 'userFormatter'
+                        },
+                        {
+                            field: 'USER_STATUS',
+                            title: 'Durum',
+                            formatter: 'userFormatter'
+                        },
+                        {
+                            field: 'LAST_ACTIVITY',
+                            title: 'Son Aktivite',
+                            formatter: 'aktiviteFormatter'
+                        },
+                        {
+                            field: '',
+                            title: 'Oturum',
+                            formatter: 'oturumFormatter'
+
+                        }
+
+                    ]
+
+                })
             }
+        }
+        function dataSorter(a, b) {
+            if (parseInt(a) < parseInt(b)) return 1;
+            if (parseInt(a) > parseInt(b)) return -1;
+            return 0;
         }
         function formatterAuth(value, index, row) {
             if (value) {
@@ -621,6 +688,14 @@
             } else {
                 return '<input class="form-check-input" type="checkbox" onchange="changeAuth(' + index.USER_ID + ',' + index.MODULE_INCKEY+')" value="" id="defaultCheck3">';
             }
+        }
+        function userFormatter(value, index, row) {
+            if (index.USER_STATUS == "Çevrimiçi") {
+                return "<span style='color:green'>" + value + "</span>";
+            } else {
+                return "<span style='color:red'>" + value + "</span>";
+            }
+            
         }
 
         function changeAuth(value, value2) {
@@ -719,6 +794,94 @@
         }
         function myEkleFunction() {
             document.getElementById("myFormAdd").submit();
+        }
+        function aktiviteFormatter(value, index, row) {
+
+            var m = last.filter(x => x.LOG_ID == index.LOG_ID)[0];
+            if (m != null) {
+                return m.LAST_ACTIVITY;
+            } else {
+
+                return ""
+            }
+            
+        }
+        function oturumFormatter(value, index, row) {
+            if (index.USER_STATUS=="Çevrimiçi") {
+                return '<img id="logoff" style="cursor:pointer" onclick="logoff(' + index.LOG_ID + ')" src="/assets/img/icons/unicons/power-off.png"/>';
+            }
+            else{
+                return "-";
+            }
+           
+
+        }
+        function logoff(value) {
+            Swal.fire({
+                title: 'Kullanıcının oturumunu kapatmak istediğinize emin misiniz? ',
+                icon: 'question',
+                showDenyButton: false,
+                showCancelButton: true,
+                confirmButtonText: 'Evet',
+                cancelButtonText: 'Hayır',
+                confirmButtonColor: '#03c3ec',
+                confirmButtonBorderColor: '#03c3ec',
+                cancelButtonColor: '#ff3e1d',
+            }).then((result) => {
+                /* Read more about isConfirmed, isDenied below */
+                if (result.isConfirmed) {
+                    var url = "http://192.168.2.13:83/api/userlogin/exec/logoff/" + value;
+                    $.getJSON(url, function (data) {
+
+                    }).done(function () {
+                        $('#table').bootstrapTable('destroy');
+                        document.getElementById("trid").replaceChildren();
+                        $('#table').bootstrapTable({
+                            url: 'http://192.168.2.13:83/api/userlogin/exec/lastseen',
+                            columns: [
+                                {
+                                    field: 'LOG_ID',
+                                    title: 'Oturum Numarası',
+                                    sorter: 'dataSorter',
+                                    sortable: true,
+                                    visible: false
+
+                                },
+                                {
+                                    field: 'USER_NAME',
+                                    title: 'Kullanıcı Adı',
+                                    formatter: 'userFormatter'
+                                },
+                                {
+                                    field: 'LAST_SEEN',
+                                    title: 'Son Görülme',
+                                    formatter: 'userFormatter'
+                                },
+                                {
+                                    field: 'USER_STATUS',
+                                    title: 'Durum',
+                                    formatter: 'userFormatter'
+                                },
+                                {
+                                    field: 'LAST_ACTIVITY',
+                                    title: 'Son Aktivite',
+                                    formatter: 'aktiviteFormatter'
+                                },
+                                {
+                                    field: '',
+                                    title: 'Oturum',
+                                    formatter: 'oturumFormatter'
+
+                                }
+
+                            ]
+
+                        })
+                    });
+                   
+                }
+            })
+           
         }
     </script>
 </div>
